--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,8 @@ fastapi==0.109.0
 uvicorn==0.23.2
 urllib3==2.1.0
 python-dotenv == 1.0.1
+streamlit~=1.33.0
+requests~=2.32.3
+pydantic~=2.6.4
+openai~=1.40.1
+torch~=2.0.1
